git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11412 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 86073a4d0e61ec950f6d9c90e52ee9086b9cf81c

--- a/kermeta_projects/fr.irisa.triskell.kermeta.site/history.html
+++ b/kermeta_projects/fr.irisa.triskell.kermeta.site/history.html
@@ -41,6 +41,7 @@ $Id: history.html,v 1.38 2008-10-02 15:36:30 dvojtise Exp $
 	<li>#3724; <a href="http://gforge.inria.fr/tracker/index.php?func=detail&aid=3724&group_id=32&atid=205">How to suppress the kermeta nature of a project ?.</a> Now we have clear actions to add Kermeta nature and remove kermeta nature on projects.</li>
 	<li>#4339; <a href="http://gforge.inria.fr/tracker/index.php?func=detail&aid=4339&group_id=32&atid=205">when calling kmlogo interpreter cannot call the compiler anymore and vice versa</a></li>
 	<li>#5278; <a href="http://gforge.inria.fr/tracker/index.php?func=detail&aid=5278&group_id=32&atid=205">conflict and crash if there is an alias to an Enumeration</a></li>
+	<li>#5735; <a href="http://gforge.inria.fr/tracker/index.php?func=detail&aid=5735&group_id=32&atid=205">KPM performance problems on check-out of very large projects.</a></li>
 	<li>#6092; <a href="http://gforge.inria.fr/tracker/index.php?func=detail&aid=6092&group_id=32&atid=205">Only a 'null' word when saving model if MM not registered</a></li>
 	<li>#6466; <a href="http://gforge.inria.fr/tracker/index.php?func=detail&aid=6466&group_id=32&atid=205">Console is closed before interpreter can report an error.</a></li>
 	<li>#7759; <a href="http://gforge.inria.fr/tracker/index.php?func=detail&aid=7759&group_id=32&atid=205">km2Ecore doesn't save the documentation of the invariants.</a></li>
