git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11543 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 89bba77f04890e9b3bfb27acd49f90002d7a09e3

--- a/kermeta_projects/fr.irisa.triskell.kermeta.site/history.html
+++ b/kermeta_projects/fr.irisa.triskell.kermeta.site/history.html
@@ -10,6 +10,12 @@ $Id: history.html,v 1.38 2008-10-02 15:36:30 dvojtise Exp $
 -->
 <!-- please follow the template ... -->
 <h1>History of Kermeta development</h1>
+<h2 class="Heading">V1.4.1 (11/6/2010)</h2>
+<h3>Bug fixed</h3>
+<ul>
+	<li>Fixed launcher of Compiler V2 (which remains experimental).	
+	</li>
+</ul>
 <h2 class="Heading">Repository head </h2>
 <h2 class="Heading">V1.4.0 (31/1/2010)</h2>
 <h3>New features</h3>
