--- a/kermeta_projects/fr.irisa.triskell.kermeta.site/history.html
+++ b/kermeta_projects/fr.irisa.triskell.kermeta.site/history.html
@@ -11,6 +11,11 @@ $Id: history.html,v 1.38 2008-10-02 15:36:30 dvojtise Exp $
 <!-- please follow the template ... -->
 <h1>History of Kermeta development</h1>
 <h2 class="Heading">Repository head </h2>
+
+<h3>Improved features</h3>
+<ul>
+	<li>Small performance improvement in the interpreter when assigning : do not recreate the class Collection<Object> all the time</li>
+</ul>
 <h2 class="Heading">V1.4.1 (11/6/2010)</h2>
 <h3>Bug fixed</h3>
 <ul>
