git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12338 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 947c6d7e4dcbc1ea5a8529b1d0c80d6f7f9ecce2

--- a/kermeta_projects/fr.irisa.triskell.kermeta.site/history.html
+++ b/kermeta_projects/fr.irisa.triskell.kermeta.site/history.html
@@ -12,6 +12,11 @@ $Id: history.html,v 1.38 2008-10-02 15:36:30 dvojtise Exp $
 <h1>History of Kermeta development</h1>
 <h2 class="Heading">Repository head </h2>
 
+<h3>Bug fixed</h3>
+<ul>
+	<li>Fixed a problem when saving using a metamodel splitted in several ecore files.	
+	</li>
+</ul>
 <h3>Improved features</h3>
 <ul>
 	<li>Small performance improvement in the interpreter when assigning : do not recreate the class Collection<Object> all the time</li>
