--- a/kermeta_projects/fr.irisa.triskell.kermeta.site/history.html
+++ b/kermeta_projects/fr.irisa.triskell.kermeta.site/history.html
@@ -11,11 +11,16 @@ $Id: history.html,v 1.38 2008-10-02 15:36:30 dvojtise Exp $
 <!-- please follow the template ... -->
 <h1>History of Kermeta development</h1>
 <h2 class="Heading">Repository head </h2>
-
+<h3>Improved features</h3>
+<ul>
+	<li>The eclipse package deployed with Kermeta is now in version 3.6.1 (Helios).  
+	</li>
+</ul>
 <h3>Bug fixed</h3>
 <ul>
 	<li>Fixed a problem when saving using a metamodel splitted in several ecore files.	
 	</li>
+	<li>#11318; <a href="http://gforge.inria.fr/tracker/index.php?func=detail&aid=11318&group_id=32&atid=205">Pb with XSD generated ecore with simple property hold by a complex mixed attribute.</a> Now we correctly deal with ecore files that use this structure.</li>	
 </ul>
 <h3>Improved features</h3>
 <ul>
